[workspace]
members = [
    "packages/flare-db",
    "packages/flare-server",
    "packages/flare-protocol",
    "packages/flare-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.7", features = ["ws", "macros"] }
tonic = "0.12"
prost = "0.13"
sled = "0.34"
socketioxide = "0.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
